istio/destinationrule-catalogue.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: catalogue
  namespace: roboshop
spec:
  host: catalogue
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
