istio/virtualservice-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: roboshop
spec:
  hosts:
    - "*"
  gateways:
    - roboshop-gateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 80
